--- a/simply_me.html
+++ b/simply_me.html
@@ -9,9 +9,10 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-<h3>Who I am?</h3>
-<img src="bird.jpg" alt="bird">
-<h3>I`m an adventurer</h3>
+<div class="container-fluid">
+	<h3>Who I am?</h3>
+	<img src="bird.jpg" alt="bird">
+	<h3>I`m an adventurer</h3>
+</div>
 </body>
 </html>
