--- a/simply_me.html
+++ b/simply_me.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container-fluid bg-1 text-center">
 	<h3>Who I am?</h3>
-	<img src="bird.jpg" alt="bird">
+	<img src="bird.jpg" class="img-circle" alt="bird">
 	<h3>I`m an adventurer</h3>
 </div>
 </body>
