add class bg-2 and bg-3

--- a/simply_me.html
+++ b/simply_me.html
@@ -14,6 +14,16 @@
 	<h3>Who I am?</h3>
 	<img src="bird.jpg" class="img-circle" alt="bird">
 	<h3>I`m an adventurer</h3>
+	</div>
+
+<div class="container-fluid bg-2 text-center">
+	<h3>Who I am?</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus est est, placerat eget imperdiet eu, fringilla sit amet diam. Morbi consequat quam eu mollis fringilla.</p>
+</div>
+
+<div class="container-fluid bg-3 text-center">
+	<h3>Where to find me?</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus est est, placerat eget imperdiet eu, fringilla sit amet diam. Morbi consequat quam eu mollis fringilla.</p>
 </div>
 </body>
 </html>
