add button search

--- a/simply_me.html
+++ b/simply_me.html
@@ -19,6 +19,7 @@
 <div class="container-fluid bg-2 text-center">
 	<h3>Who I am?</h3>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus est est, placerat eget imperdiet eu, fringilla sit amet diam. Morbi consequat quam eu mollis fringilla.</p>
+	<a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span>Search</a>
 </div>
 
 <div class="container-fluid bg-3 text-center">
