--- a/simply_me.html
+++ b/simply_me.html
@@ -18,7 +18,17 @@
 
 <div class="container-fluid bg-2 text-center">
 	<h3>Who I am?</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus est est, placerat eget imperdiet eu, fringilla sit amet diam. Morbi consequat quam eu mollis fringilla.</p>
+	<div class="row">
+		<div class="col-sm-4">
+			<img src="advent1.jpg" width="200" height="200" atl="Image">
+		</div>
+		<div class="col-sm-4">
+			<img src="advent2.jpg" width="200" height="200" atl="Image">
+		</div>
+		<div class="col-sm-4">
+			<img src="advent3.jpg" width="200" height="200" atl="Image">
+		</div>
+	</div>
 	<a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span>Search</a>
 </div>
 
