--- a/simply_me.html
+++ b/simply_me.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container-fluid bg-1 text-center">
 	<h3>Who I am?</h3>
-	<img src="bird.jpg" class="img-circle" alt="bird">
+	<img src="bird.jpg" class="img-responsive img-circle" style="display:inline" alt="bird">
 	<h3>I`m an adventurer</h3>
 	</div>
 
@@ -20,13 +20,16 @@
 	<h3>Who I am?</h3>
 	<div class="row">
 		<div class="col-sm-4">
-			<img src="advent1.jpg" width="200" height="200" atl="Image">
+			<img src="advent1.jpg" class="img-responsive" style="width:100%" atl="Image">
+			<p>Me on bike</p>
 		</div>
 		<div class="col-sm-4">
-			<img src="advent2.jpg" width="200" height="200" atl="Image">
+			<img src="advent2.jpg" class="img-responsive" style="width:100%" atl="Image">
+			<p>Me on the mountain</p>
 		</div>
 		<div class="col-sm-4">
-			<img src="advent3.jpg" width="200" height="200" atl="Image">
+			<img src="advent3.jpg" class="img-responsive" style="width:100%"  atl="Image">
+			<p>Me jumping from the mountain</p>
 		</div>
 	</div>
 	<a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span>Search</a>
