--- a/simply_me.html
+++ b/simply_me.html
@@ -10,6 +10,29 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
+
+<!-- navbar -->
+<nav class="navbar navbar-default">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">ME</a>
+		</div>
+		<div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#">WHO</a></li>
+				<li><a href="#">WHAT</a></li>
+				<li><a href="#">WHERE</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
+
+<!--main part-->
 <div class="container-fluid bg-1 text-center">
 	<h3>Who I am?</h3>
 	<img src="bird.jpg" class="img-responsive img-circle" style="display:inline" alt="bird">
