--- a/simply_me.html
+++ b/simply_me.html
@@ -62,5 +62,10 @@
 	<h3>Where to find me?</h3>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus est est, placerat eget imperdiet eu, fringilla sit amet diam. Morbi consequat quam eu mollis fringilla.</p>
 </div>
+
+<!--footer-->
+<footer class="container-fluid bg-4 text-center">
+	<p>Bootstrap Theme Made By <a href="http://www.w3schools.com">www.w3schools.com</a></p>
+</footer>
 </body>
 </html>
